--- a/vignettes/prevR-vignette-short.Rmd
+++ b/vignettes/prevR-vignette-short.Rmd
@@ -9,7 +9,13 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-This document demonstrates how predictions of prevalence are calculated from a synthetic patient dataset. For the purposes of this document, the term prevalence refers to estimates of point prevalence at an index date. Where we calculate prevalence for a specific number of years, *n-years*, this means the number of years working back from the index date for which we have included incident cases in the prevalent pool. Therefore, the higher the value of *n*, the more incident cases are included, and the greater the value of the prevalence estimate. We would argue that the higher the value of *n*, the more accurate the prevalence prediction, until the number of years simulated is markedly disproportionate to the number of years of registry data available. 
+In this vignette we are going to demonstrate how predictions of prevalence are calculated from a synthetic patient dataset using `prevR`. We use the term prevalence to mean estimates of point prevalence of a disease at an index date calculated from incidence and modelled survival probability from registry data. Where we calculate prevalence for a specific number of years, *n* years, this means the number of years working back from the index date for which we have included incident cases in the prevalent pool. Therefore, the higher the value of *n*, the more incident cases are included. If *n* is greater than the number of registry years for which we have real patient data, then the contribution for the years preceding the registry back to *n* years is estimated using Monte Carlo simulation. This is illustrated in the diagram below:
+
+![Estimating prevalence from registry data using prevR.](diagram.JPG)
+
+As prevalence is estimated for the simulated years using probability of survival from the disease, modelled on the available registry data, an appropriate value of *n* should be selected. If *n* is too low, the prevalence prediction will be an underestimate, as long-surviving cases may exist that were incident before *n* years preceding the index date. If *n* is too high relative to the length of the registry, the longer the simulation and the greater the reliance on extrapolation from the registry data. If the disease of interest is rapidly fatal or the registry is sufficiently long that survival is accurately modelled on the available data, larger values of *n* might be appropriate. It is necessary to keep in mind that, as survival is presently modelled with an asymptotic Weibull distribution, some long-surviving cases may appear to be immortal. To overcome the problem of extrapolating the survival of these patients, we recommend implementing our so-called *cure* model, which we will discuss in more detail later in this vignette. In short, the higher the value of *n*, the more accurate the prevalence prediction, as long as survival can be adequately modelled over *n* years from the available registry data. 
+
+In the following sections we aim to take the user through the successive stages of the modelling process, outlining the correct use of the basic functions, illustrating how the diagnostics provided are used to check the validity of the assumptions required for simulating years of interest before the registry, and checking the agreement between observed and simulated prevalence estimates. Firstly we will inspect the consistency of incidence data between years of the registry and determine if it can be appropriate modelled as an homogeneous Poisson process. Secondly, we will look at the consistency of the survival data between years of the registry and check the adequacy of a parametric model of survival. We will also introduce the population survival data and explain how it integrates with patient survival to produce a *cure* model, where it is desired. Lastly, we will introduce our functions for estimating prevalence, demonstrate how to check the resulting estimates are reasonable, and harvest the posterior distribution of a modelled covariate.
 
 ```{r, echo = FALSE, message = FALSE}
 devtools::load_all()
@@ -23,7 +29,7 @@ library(survival)
 data(prevsim)
 ```
 
-*prevsim* is a dataset that has been synthesised to resemble disease registry data. Incident cases are recorded from `r min(prevsim$entrydate)` to `r max(prevsim$entrydate)`, and events occur between `r min(prevsim$eventdate)` and `r max(prevsim$eventdate)`. It has 6 columns and is organised in a fashion typical to that found in real registry datasets. Patient data includes the date of both entry into the registry and last known event (be it death or a censored event time); survival time and an event indicator (*status*), along with both age and sex. The latter two are incorporated into the prevalence model at several levels, from being used as co-variates in the survival modelling, and marking the incidence Poisson process. Currently `prevR` does not support the inclusion of additional variables in either the survival or incidence models, although this feature will be introduced in later releases.
+*prevsim* is a dataset that has been synthesised to resemble disease registry data. Incident cases are recorded from `r min(prevsim$entrydate)` to `r max(prevsim$entrydate)`, and events occur between `r min(prevsim$eventdate)` and `r max(prevsim$eventdate)`. It has 6 columns and is organised in a fashion typical to that found in real registry datasets. Patient data includes the date of both entry into the registry and last known event (be it death or a censored event time); survival time and an event indicator (*status*), along with both age and sex. The latter two are incorporated into the prevalence model at several levels, from being used as covariates in the survival modelling, and marking the incidence Poisson process. Currently `prevR` does not support the inclusion of additional variables in either the survival or incidence models, although this feature will be introduced in a later release.
 
 ```{r}
 summary(prevsim)
@@ -34,15 +40,14 @@ The following plot shows the survival characteristics of the included dataset, *
 ```{r basicsurvival, fig.height=4, fig.width=7}
 survf <- survfit(Surv(time, status) ~ sex, data=prevsim)
 plot(survf, lwd=2, col = c(1:2), xlab="Days", ylab="Probability")
-legend(3000, 1, c("Males", "Females"), lty = 1, col=c(1:2))
+legend(3000, 1, c("Males", "Females"), lty = 1, col=c("blue","red"))
 ```
-
 
 # Incidence
 
-The simulated of incidence cases in the years for which registry data is not available relies upon the assumption of a homogeneous Poisson process. The package includes several functions for inspecting the incidence data, as well as diagnosing the validity of the Poisson fit.
+The simulation of incident cases in the years for which registry data is not available relies upon the assumption of a homogeneous Poisson process. The package includes several functions for inspecting the incidence data, as well as diagnosing the validity of the Poisson fit.
 
-The `incidence` function calculates absolute incidence of disease for each selected year of the registry; the optional arguments *start* and *num_reg_years* allow for the specification of certain years, this is useful when there are doubts about the accuracy of the incidence data for example during the first year of operation of the registry. The output is a vector of *num_reg_years* length, detailing the number of incident cases in the registry at yearly intervals starting at `start` date. I.e. in the following output, the incidence between 2004-01-30 and 2005-01-30 is 107.
+The `incidence` function calculates absolute incidence of disease for each selected year of the registry; the optional arguments *start* and *num_reg_years* allow for the specification of certain years. These are useful when there are doubts about the accuracy of the incidence data, e.g. during the first year of operation of the registry. The output is a vector of *num_reg_years* length, detailing the number of incident cases in the registry at yearly intervals starting at `start` date. For example, in the following output, the incidence between 2004-01-30 and 2005-01-30 is `r incidence(prevsim$entrydate, start="2004-01-30", num_reg_years=1)`.
 
 ```{r totalincidence, error = TRUE}
 raw_incidence <- incidence(prevsim$entrydate, start="2004-01-30", num_reg_years=9)
@@ -51,16 +56,16 @@ raw_incidence
 
 It can be concluded that the disease has around 100 new cases each year. To assess consistency of the incidence data with an homogeneous Poisson process, the `test_poisson_fit`, `inspect_incidence`, and `poisson_incidence_sim` functions can be used.
 
-`test_poisson_fit` outputs the p-values for testing whether the process is over or underdispered.
+`test_poisson_fit` outputs the p-values for testing whether the process is over or underdispersed:
 **Is this precisely what they are?**
 
 ```{r}
 test_poisson_fit(raw_incidence)
 ```
 
-`inspect_incidence` and `poisson_incidence_sim` are both graphical means of validating the Poisson fit, and are methods of a `cincidence` object, for which the constructor is `cumulative_incidence`. This function calculates cumulative incidence for the registry data and fits a spline to it.
+`inspect_incidence` and `poisson_incidence_sim` are both graphical means of validating the Poisson fit, and are methods of a `cincidence` object, for which the constructor is `cumulative_incidence`. This function calculates cumulative incidence for the registry data and fits a spline to it:
 
-```{r, fig.width = 7, fig.height = 7, include = TRUE, results="hide"}
+```{r}
 c_inc <- cumulative_incidence(prevsim$entrydate, start = "2004-01-30", num_reg_years = 9)
 summary(c_inc)
 ```
@@ -68,23 +73,23 @@ summary(c_inc)
 `inspect_incidence` displays a plot of the actual incidence rate as recorded in the registry, with the smooth overlaid. 
 **How to determine if Poisson is a good fit based on this?**
 
-```{r, fig.width = 7, fig.height = 7, include = TRUE, results="hide"}
+```{r, fig.width = 7, fig.height = 4}
 inspect_incidence(c_inc)
 ```
 
 `poisson_incidence_sim` simulates a large number of incident case datasets, where the incident cases are randomly uniformly distributed between the start and end date of the original registry. Smooths are then fitted to these datasets. For both the smooth from the `cincidence` object and the simulated smooths, the deviations from the actual data are calculated. The deviations of the simulated smooths are plotted in grey, while the deviation from the actual smooth is displayed in red, with confidence intervals in grey.
 
-For a homogeneous incidence process, the deviation from the smooths will be normally distributed, and so this plot expects to see evidence of this if the assumption is met.
+For an homogeneous incidence process, the deviation from the smooths will be normally distributed, and so this plot expects to see evidence of this if the assumption is met:
 
 **Is this a correct summary? How to use this for diagnostic purposes?**
 
-```{r, fig.width = 7, fig.height = 7, include = TRUE, results="hide"}
+```{r, fig.width = 7, fig.height = 4}
 poisson_incidence_sim(c_inc)
 ```
 
 Currently, the incidence process can only be modelled as a Poisson homogeneous process; if the diagnostics indicate this is not a suitable fit then the prevalence estimates will be inaccurate. Future releases of `prevR` will allow for custom incidence distributions.
 
-There are other functions to describe the incident cases, such as `incidence_age_distribution` and `mean_incidence_rate`. The former simply plots the distribution of incident cases by age.
+There are other functions to describe the incident cases, such as `incidence_age_distribution` and `mean_incidence_rate`. The former simply plots the distribution of incident cases by age:
 
 ```{r incidenceage, fig.width = 7, fig.height = 4, error = TRUE}
 prevsim_r <- prevsim[prevsim$entrydate >= "2004-01-30", ]
@@ -92,7 +97,7 @@ prevsim_r <- prevsim[prevsim$entrydate >= "2004-01-30", ]
 incidence_age_distribution(prevsim_r$age)
 ```
 
-To calculate the mean incidence rate per 100,000 within the study population `mean_incidence_rate` is used, which requires an estimate of the size of the population at risk. The function provides confidence intervals at the specified level (default is 95%).
+To calculate the mean incidence rate per 100,000 within the study population `mean_incidence_rate` is used, which requires an estimate of the size of the population at risk. The function provides confidence intervals at the specified level (default is 95%):
   
 ```{r incidencerate, error = TRUE}
 mean_incidence_rate(prevsim$entrydate, population_size = 3.5e6,
@@ -101,18 +106,18 @@ mean_incidence_rate(prevsim$entrydate, population_size = 3.5e6,
 
 # Survival modelling
 
-The second component to the prevalence estimation is the survival modelling process. It is recommended that the user inspects the survival data for consistency between years of the registry and with a Cox Proportional Hazards model as follows.
+The second component to the prevalence estimation is the survival modelling process. It is recommended that the user inspects the survival data for consistency between years of the registry and with a Cox Proportional Hazards model as follows:
 
 **How do these plots show that?, what are the CIs, the colours, the smooths etc... all showing?**
 
-It is always useful to plot the Kaplan-Meier estimator of the data, both as a whole and stratified by age to visually inspect for any inconsistencies.
-
-```{r survivaldiag, fig.width = 7, fig.height = 7}
+```{r survivaldiag, fig.width = 7, fig.height = 4}
 km <- survfit(Surv(time, status) ~ 1, data=prevsim_r)
 plot(km, lwd=2, col="blue", xlab="Days", ylab="Survival probability")
 ```
 
-```{r survivaldiag2, fig.width = 7, fig.height = 7}
+It is always useful to plot the Kaplan-Meier estimator of the data, both as a whole and stratified by age to visually inspect for any inconsistencies.
+
+```{r survivaldiag2, fig.width = 7, fig.height = 4}
 ages = c(55, 65, 75, 85, 100)
 km2 <- survfit(Surv(time, status) ~ cut(age, breaks=ages), data=prevsim_r)
 plot(km2, lwd=2, col=1:length(ages), xlab="Days", ylab="Survival probability")
@@ -124,7 +129,7 @@ The effect of age on hazard can be visualised to determine if there are any non-
 
 **What exactly is this plot of?!**
 
-```{r survivaldiag3, fig.width = 7, fig.height = 7}
+```{r survivaldiag3, fig.width = 7, fig.height = 4}
 cx <- coxph(Surv(time, status) ~ age, data=prevsim_r)
 cxp <- survfit(cx, 
                newdata=data.frame(age=sapply(seq(length(ages) - 1), 
@@ -134,7 +139,7 @@ lines(cxp, lwd=2, col=1:length(ages), lty=2, mark.time=F)
 
 ```
 
-It is always essential to test the proportional hazards assumption.
+It is always essential to test the proportional hazards assumption:
 
 **Does the Weibull AFT parameterisation in `survreg` need the PH assumption to be met?**
 
@@ -144,7 +149,7 @@ cox.zph(cx)
 
 It is also a useful diagnostic aid to plot the survival curve for each year of the registry to determine whether there are any patterns:
 
-```{r survivaldiag4, fig.width = 7, fig.height = 7, results='hide'}
+```{r survivaldiag4, fig.width = 7, fig.height = 4, results='hide'}
 plot(km, lwd=2, col="blue", mark.time=F, conf.int=T, xlab="Days", ylab="Survival probability")
 num_reg_years <- 9
 registry_years <- determine_registry_years(start='2004-01-30', num_reg_years=num_reg_years)
@@ -184,7 +189,7 @@ As an alternative to extrapolation from the Weibull model alone when modelling l
 
 General population period survival data for the UK is loaded from the supplied `UKmortality` dataset, and yearly rates are translated into daily rates by linear interpolation using `population_survival_rate()`. 
 
-```{r popsurv, fig.width = 6, fig.height = 4, error = TRUE}
+```{r popsurv, fig.width = 7, fig.height = 4, error = TRUE}
 data(UKmortality)
 
 daily_survival_males <- population_survival_rate(rate ~ age, subset(UKmortality, sex == 0))
@@ -198,7 +203,7 @@ legend("topright", legend = c("Males", "Females"),
 
 # Prevalence estimates
 
-As a reminder, prevalence is estimated using incidence and survival data from *N* years, the larger *N*, the more accurate the estimate. However, registry data (and thus known incidence and survival) data may only be known for *r* years, where *r* <= *N*. If *r* < *N*, the remaining *N*-*r* years of incidence and survival are simulated using Monte Carlo techniques.
+As a reminder, prevalence is estimated using incidence and survival data from *n* years, the larger *n*, the more accurate the estimate. However, registry data (and thus known incidence and survival) data may only be known for *r* years, where *r* <= *n*. If *r* < *n*, the remaining *n*-*r* years of incidence and survival are simulated using Monte Carlo techniques.
 
 ## Counts
 
@@ -251,19 +256,19 @@ prevsurv <- survfit(prevalence_total, newdata=list(age=60, sex=0))
 prevsurv
 ```
 
-The `summary.survfit.prev` method provides N-year survival probabilities, with N specified as an argument vector.
+The `summary.survfit.prev` method provides *n*-year survival probabilities, with *n* specified as an argument vector.
 
 ```{r}
 summary(prevsurv, years=c(1, 3, 5, 10))
 ```
 
-Plotting the `survfit.prev` object displays the survival curve of a Weibull model using the original dataset (orange), along with 95% confidence intervals derived using the bootstrapped models shaded in light grey, while outliers curves are displayed in black. Outliers are defined as those survival curves where at least `pct_show` proportion of their point predictions lie outside the 95% confidence interval.
+Plotting the `survfit.prev` object displays the survival curve of a Weibull model using the original dataset (orange), along with 95% confidence intervals derived using the bootstrapped models shaded in light grey, while outliers curves are individually plotted. Outliers are defined as those survival curves where at least `pct_show` proportion of their point predictions lie outside the 95% confidence interval.
 
 ```{r, fig.width=7, fig.height=4}
 plot(prevsurv, pct_show=0.90)
 ```
 
-## Comparison and substitution between simulated and counted prevalence
+## Comparison between simulated and counted prevalence
 
 Whether the model is predicting good numbers for the recent years for which we have data can be assessed using a chi squared test. `test_prevalence_fit` is a method of a `prevalence` object which calculates the chi-square test between the number of simulated prevalent contributions and those counted in the years for which registry data is available.
 
@@ -275,21 +280,15 @@ For this model, there is no evidence to reject the null hypothesis.
 
 ## Age distribution of prevalent cases
 
-The age distribution of simulated prevalent cases can be viewed as a histogram and compared with the age distribution of counted prevalent cases:
+The age distribution of simulated prevalent cases can be viewed as a histogram and compared with the age distribution of incident cases:
 
 ```{r, fig.height = 4, fig.width = 7}
-prevsim_r$status2 <- ifelse(prevsim_r$eventdate > "2013-01-30", 
-                            0, prevsim_r$status)
-observed_post_age_dist_total <- prevsim_r$age[prevsim_r$status2 == 0]
-
-post_age_dist_total <- prevalence_total$simulated$posterior_age
-
-hist(observed_post_age_dist_total, 
-     col=rgb(0.1, 0.1, 0.1, 0.5), xlim=c(0,100), ylim=c(0,0.045), 
+hist(prevsim$age[prevsim$entrydate >= min(registry_years) & prevsim$entrydate < max(registry_years)], 
+     col=rgb(1,0,0, alpha=0.5), xlim=c(0,100), ylim=c(0,0.045), 
      main = "", xlab = "age", prob = TRUE)
-hist(post_age_dist_total, 
-     col=rgb(0.8, 0.8, 0.8, 0.5), prob = TRUE, add=T)
-legend("topleft", legend = c("Observed", "Predicted"), bty = "n", lty = 1, 
-       col = c(rgb(0.1, 0.1, 0.1, 0.5),
-               rgb(0.8, 0.8, 0.8, 0.5)))
+hist(prevalence_total$simulated$posterior_age, 
+     col=rgb(0,1,0, alpha=0.5), prob = TRUE, add=T)
+legend("topleft", legend = c("Incident", "Prevalent"), bty = "n", lty = 1, 
+       col = c(rgb(1,0,0, alpha=0.5),
+               rgb(0,1,0, alpha=0.5)))
 ```
